adding event files

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,24 +13,21 @@
 </head>
 <body>
 <div class="box">
-	<!-- <div class="top">
+	<div class="top">
 		<img src="/static/img/mmil_logo.jpg" width="50px"><a href="/">MMIL</a>
-		{% if request.user.is_authenticated %}
+		
 		<button onclick="logout()"class="button">Log Out</button>
-		{% else %}
-		<button onclick="login()">Log In</button>
-		<button onclick="signup()">Sign Up</button>
-		{% endif %}
-	</div> -->
+	
+	</div>
 	<div class="center">
 		<div class="info-1 active">
-			<a href="/">About</a>
+			<a href='/QuizPortal/'>About</a>
 		</div>
 		<div class="info-1">
-			<a href='/events'>Live Events</a>
+			<a href='/QuizPortal/events'>Live Events</a>
 		</div>		
 		<div class="info-1">
-			<a href='/contact'>contact</a>
+			<a href='/QuizPortal/contact'>contact</a>
 		</div>	
 	 </div>
 	<div class="bottom">
