--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,12 +25,10 @@
 <div class="box">
 	<div class="top">
 		<img src="../static/img/mmil_logo.jpg" width="50px"><a href="/">MMIL</a>
-		<!-- {% if request.user.is_authenticated %}
-		<a href="/logout"><button class="button">Log Out</button></a>
-		{% else %}
+		
 		<button onclick="login()">Log In</button>
-		<button class="signn" onclick="signup()">Sign Up</button>
-		{% endif %} -->
+		<button class="signin" onclick="signup()">Sign Up</button>
+		
 	</div>
 	<div class="center">
 		<div class="info-1 ">
