--- a/templates/events.html
+++ b/templates/events.html
@@ -16,36 +16,87 @@
     <div class="box">
         <div class="top">
             <img src="/static/img/mmil_logo.jpg" width="50px"><a href="/">MMIL</a>
+            {{if .Checksession}} 
+            <button onclick="logout()"class="button">Log Out</button>
+            {{else}}
             <button onclick="login()">Log In</button>
             <button onclick="signup()">Sign Up</button>
+            {{end}}
+        </div> 
+        <div class="center">
+            {{ if eq .Usertype "organiser" }}
+            <div class="info-1">
+                <a href='/QuizPortal/organiser' class="event">Dashboard</a>
+            </div>
+            {{ else }}
+            <div class="info-1">
+                <a href='/QuizPortal/login/dashboard' class="event">About</a>
+            </div>
+            {{ end}}
+            <div class="info-1 active">
+                <a href="/QuizPortal/events" class="about">Live Events</a>
+            </div>	
+            <div class="info-1">
+                <a href='/QuizPortal/contact' class="contact">contact</a>
+            </div>
         </div>
-        <div class="list">
+         <div class="list">
         {{range .Elist}}
             <div class="events">
                 <div class="header">{{.Eventsname}}</div>
                 <p>{{.Eventdescription}}</p>
-		{{ if and (eq .Eventstartdate .Datenow) (ge .Timenow .Eventstartdate)}}
-        <p>Live till {{ .Eventenddate }} {{.Eventendtime}}</p>
-        {{end}}
-        <form method="POST" action="/QuizPortal/events/"></form>
-        {{end}}
+		        {{ if and (eq .Eventstartdate .Datenow) (ge .Timenow .Eventstartdate)}}
+                <p>Live till {{ .Eventenddate }} {{.Eventendtime}}</p>
+                <form method="POST" action="/quiz/">
+		        <div>
+				<input type="hidden" name="event_name" value="{{ .Eventsname }}">
+               
+				<input type="submit" name="nothing" value="Join Now">
+				
+			    </div>
+		        </form>
+                {{else if and (lt .Eventstartdate .Datenow) (lt .Datenow .Eventendtime)}} 		
+                <p>Live till {{.Eventstartdate}} {{.Eventendtime}}</p>
+                <form method="POST" action="/quiz/">
+                    <div>
+                    <input type="hidden" name="event_name" value="{{ .Eventsname}}">
+                    
+                    <input type="submit" name="nothing" value="Join Now">
+                    
+                    </div>
+                    </form>
+                {{else if and (and (lt .Eventstartdate .Datenow) (eq .Datenow .Eventenddate)) (lt .Timenow .Eventendtime)}} 		
+                <p>Live till {{.Eventenddate }} {{ .Eventendtime}}</p>
+                <form method="POST" action="/quiz/">
+                    <div>
+                    <input type="hidden" name="event_name" value="{{  .Eventsname }}">
+                    
+                    <input type="submit" name="nothing" value="Join Now">
+
+                    </div>
+                    </form>
+                {{else if and (and (eq .Eventstartdate .Datenow) (lt .Datenow .Eventenddate)) (ge .Timenow .Eventendtime)}} 		
+                <p>Live till {{.Eventenddate }} {{ .Eventendtime}}</p>
+                <form method="POST" action="/quiz/">
+                    <div>
+                    <input type="hidden" name="eventname" value="{{ .Eventsname }}">
+
+                    <input type="submit" name="nothing" value="Join Now">
+
+                    </div>
+                    </form>
+                {{ else if gt .Eventstartdate .Datenow}}
+			    <p>Will be Live Soon</p>
+		        {{ else if and (gt .Eventendtime .Timenow) (eq .Eventstartdate .Datenow)}}
+			    <p>Will be Live Soon</p>
+		        {{else}}
+			    <p>Event Expired</p>
+                {{end}}
+                
+            </div>
+            {{end}}
         </div>
-        </div>
-        
-        <script src="/static/js/app.js"></script>
-        </body>
-        </html>    
-<!-- <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>check the events list</title>
-    </head>
-    <body>
-        <h1>{{.Index}}</h1>
-        {{range .Elist}}
-         <p>{{.}}</p>
-         {{end}}
-         
-    </body>
-</html> -->
+    </div>
+<script src="/static/js/app.js"></script>
+</body>
+</html>    
