--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,40 +5,40 @@
 		QuizPortal
 	</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
-	<link rel="stylesheet" type="text/css" href="{% static 'css\dashboard.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css\signup.css' %}">
+	<link rel="stylesheet" type="text/css" href="/static/css/dashboard.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/signup.css">
 </head>
 <body>
 <div class="box">
 	<div class="top">
 		<img src="/static/img/mmil_logo.jpg" width="50px"><a href="/">MMIL</a>
-		<!-- {% if request.user.is_authenticated %}
+		<!-- {% if request.user.is_authenticated %} -->
 		<button onclick="logout()"class="button">Log Out</button>
-		{% else %}
+		<!-- {% else %}
 		<button onclick="login()">Log In</button>
 		<button onclick="signup()">Sign Up</button>
 		{% endif %} -->
 	</div>
 	<div class="center">
-		{% if organiser %}
+		<!-- {% if organiser %}
 		<div class="info-1">
 			<a href='/organiser' class="event">Dashboard</a>
 		</div>
-		{% else %}
+		{% else %} -->
 		<div class="info-1">
-			<a href='/' class="event">About</a>
+			<a href='/QuizPortal' class="event">About</a>
 		</div>
-		{% endif %}
+		<!-- {% endif %} -->
 		<div class="info-1">
-			<a href='/events'>Live Events</a>
+			<a href='/QuizPortal/events'>Live Events</a>
 		</div>		
 		<div class="info-1 active">
-			<a href='/contact'>contact</a>
+			<a href='/QuizPortal/contact'>contact</a>
 		</div>	
 	 </div>
 	<div class="bottom">
 	</div>
 </div>
-<script src="{% static 'js\app.js' %}"></script>
+<script src="/static/js/app.js"></script>
 </body>
 </html>
