--- a/templates/login.html
+++ b/templates/login.html
@@ -10,40 +10,24 @@
 	<link rel="stylesheet" type="text/css" href="/static/css/signup.css">
 </head>
 <body>
-	<!-- {% if bool %}
-		<script type="text/javascript">
-			alert("Wrong Sign up ID !!")
-		</script>
-	{% endif %}
 
-
-	{% if exist %}
-		<script type="text/javascript">
-			alert("Username Exists !!")
-		</script>
-	{% endif %} -->
 <div class="box">
 	<div class="top">
-		<img src="../static/img/mmil_logo.jpg" width="50px"><a href="/">MMIL</a>
-		<!-- {% if request.user.is_authenticated %}
-		<a href="/logout"><button class="button">Log Out</button></a>
-		{% else %}
-		<button onclick="login()">Log In</button>
-		<button class="signn" onclick="signup()">Sign Up</button>
-		{% endif %} -->
+		<img src="../static/img/mmil_logo.jpg" width="50px"><a href="/">MMIL</a> 
+
 	</div>
 	<div class="center">
 		<div class="info-1 ">
-			<a href="/" class="about">About</a>
+			<a href="/QuizPortal" class="about">About</a>
 		</div>
 		<div class="info-1">
-			<a href='/events' class="event">Live Events</a>
+			<a href='/QuizPortal/events' class="event">Live Events</a>
 		</div>
 <!-- 		<div class="info-1">
 			<a href='/' class="leacerboard">leaderboard</a>
 		</div>	 -->
 		<div class="info-1">
-			<a href='/contact' class="contact">contact</a>
+			<a href='/QuizPortal/contact' class="contact">contact</a>
 		</div>
 		<!-- <a href="#">About</a> -->
 	</div>
@@ -55,6 +39,7 @@
 				<input type="password" name="password" required="" placeholder="password">
 				<input type="submit" name="submit" value="Submit">	
 			</form>
+			<a href="/QuizPortal/organizer" style="font-family: arca"><u>Organiser?</u></a>
 		</div>
 	</div>
 </div>
