--- a/templates/orglogin.html
+++ b/templates/orglogin.html
@@ -6,8 +6,8 @@
 		Log In
 	</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
-	<link rel="stylesheet" type="text/css" href="{% static 'css\dashboard.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css\login.css' %}">
+	<link rel="stylesheet" type="text/css" href="/static/css/dashboard.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/login.css">
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 </head>
 <body>
