--- a/templates/orglogin.html
+++ b/templates/orglogin.html
@@ -19,22 +19,22 @@
 <div class="box">
 	<div class="top">
 		<img src="/static/img/mmil_logo.jpg" width="50px"><a href="/">MMIL</a>
-		<!-- {% if request.user.is_authenticated %}
-		<button onclick="logout()"class="button">Log Out</button>
-		{% else %}
-		<button class="log"onclick="login()">Log In</button>
-		<button onclick="signup()">Sign Up</button>
-		{% endif %} -->
+		{{if .Checksession}}
+		<button class="button" onclick="logout()">Log Out</button>
+		{{ else }}
+		<button onclick="login()">Log In</button>
+		<button class="signn" onclick="signup()">Sign Up</button>
+		{{ end}}
 	</div>
 	<div class="center">
 		<div class="info-1">
-			<a href="/" class="">About</a>
+			<a href="/QuizPortal" class="">About</a>
 		</div>
 		<div class="info-1">
-			<a href='/events' class="">Live Events</a>
+			<a href='/QuizPortal/events' class="">Live Events</a>
 		</div>	
 		<div class="info-1">
-			<a href='/contact' class="contact">contact</a>
+			<a href='/QuizPortal/contact' class="contact">contact</a>
 		</div>
 		<!-- <a href="#">About</a> -->
 	</div>
@@ -50,6 +50,6 @@
 		</div>
 	</div>
 </div>
-<script src="{% static 'js/app.js' %}"></script>
+<script src="/static/js/app.js"></script>
 </body>
 </html>
