--- a/templates/addquestion.html
+++ b/templates/addquestion.html
@@ -21,7 +21,7 @@
             {{end}}
 	</div>
 	<div class="center">
-        {{ if eq .Usertype "organiser" }}
+        {{ if  .Usertype }}
 		<div class="info-1">
 			<a href='/QuizPortal/organiser/dashboard' class="event">Dashboard</a>
 		</div>
