--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,23 +12,23 @@
 <div class="box">
 	<div class="top">
 		<img src="/static/img/mmil_logo.jpg" width="50px"><a href="/">MMIL</a>
-		<!-- {% if request.user.is_authenticated %} -->
+		{{if .Checksession}} 
 		<button onclick="logout()"class="button">Log Out</button>
-		<!-- {% else %}
+		{{else}}
 		<button onclick="login()">Log In</button>
 		<button onclick="signup()">Sign Up</button>
-		{% endif %} -->
+		{{end}}
 	</div>
 	<div class="center">
-		<!-- {% if organiser %}
+		{{ if .Usertype}}
 		<div class="info-1">
-			<a href='/organiser' class="event">Dashboard</a>
+			<a href='/QuizPortal/organiser/dashboard' class="event">Dashboard</a>
 		</div>
-		{% else %} -->
+		{{ else }}
 		<div class="info-1">
 			<a href='/QuizPortal' class="event">About</a>
 		</div>
-		<!-- {% endif %} -->
+		{{ end}}
 		<div class="info-1">
 			<a href='/QuizPortal/events'>Live Events</a>
 		</div>		
