adding files to second branch

--- a/templates/login.html
+++ b/templates/login.html
@@ -40,7 +40,7 @@
 		<div class="signupbox">
 			<form method="POST">
 				<h2 style="font-family: arca;">PARTICIPANT LOGIN</h2>
-				<input type="text" name="username" required="" placeholder="USER NAME">
+				<input type="text" name="username" required="" placeholder="username">
 				<input type="password" name="password" required="" placeholder="password">
 				<input type="submit" name="submit" value="Submit">	
 			</form>
