--- a/templates/events.html
+++ b/templates/events.html
@@ -26,7 +26,7 @@
         <div class="center">
             {{ if .Usertype }}
             <div class="info-1">
-                <a href='/QuizPortal/organiser/dashboard' class="event">Dashboard</a>
+                <a href='/QuizPortal/organizer/dashboard' class="event">Dashboard</a>
             </div>
             {{ else }}
             <div class="info-1">
@@ -47,14 +47,14 @@
                 <p>{{.Eventdescription}}</p>
                {{ if and (.After) (.Before)}}
                       <p>Live till </p>
+                      <p>{{.Enddate}}</p>
+                      <p>{{.Etime}}</p>
                       <form method="POST" action="/quiz/">
                          <div>
                           <input type="hidden" name="eventname" value="{{.Eventsname}}">
-                          {{ if .Usertype }}
-                          <p><b>Log in as a Participant to Join</b></p>
-                          {{ else}}
+                         
                           <input type="submit" name="nothing" value="Join Now">
-                           {{end}}
+                          
                           </div>
                          </form>
                 {{else if not (.Before) }}
