--- a/templates/orgdashboard.html
+++ b/templates/orgdashboard.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -57,13 +56,10 @@
                                 <input type="hidden" name="eventname" value="{{ .Eventsname }}" />
                                 <button type="submit" class="icon1"><i class="fa fa-edit" title="Add Questions"></i></button>
                             </form>
-            
                         </div>
                         <div  class="btn-delete" class="innerblock">
                             <form method="POST" action="/QuizPortal/deleteEvent/">
-                           
-
-                                <input type="hidden" name="eventname" value="{{ .Eventsname }}" />
+                           <input type="hidden" name="eventname" value="{{ .Eventsname }}" />
                                 <button id="{{ .Eventsname }}" type="submit" class="icon2"><i class="fa fa-times" aria-hidden="true" title="Delete"></i></button>
                             </form>
                         </div>
@@ -76,4 +72,5 @@
             </div>
             <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
             <script src="/static/js/app.js"></script>
-            
+</body>
+</html>
