--- a/templates/events.html
+++ b/templates/events.html
@@ -17,7 +17,7 @@
         <div class="top">
             <img src="/static/img/mmil_logo.jpg" width="50px"><a href="/">MMIL</a>
             {{if .Checksession}} 
-            <button onclick="logout()"class="button">Log Out</button>
+            <button onclick="logout()" class="button">Log Out</button>
             {{else}}
             <button onclick="login()">Log In</button>
             <button onclick="signup()">Sign Up</button>
@@ -49,7 +49,7 @@
                       <p>Live till </p>
                       <p>{{.Enddate}}</p>
                       <p>{{.Etime}}</p>
-                      <form method="POST" action="/quiz/">
+                      <form method="GET" action="/quiz/">
                          <div>
                           <input type="hidden" name="eventname" value="{{.Eventsname}}">
                          
