--- a/templates/events.html
+++ b/templates/events.html
@@ -50,11 +50,11 @@
                       <form method="POST" action="/quiz/">
                          <div>
                           <input type="hidden" name="eventname" value="{{.Eventsname}}">
-                          {{ if .Usertype }}
-                          <p><b>Log in as a Participant to Join</b></p>
-                          {{ else}}
+{{/*                          {{ if .Usertype }}*/}}
+{{/*                          <p><b>Log in as a Participant to Join</b></p>*/}}
+{{/*                          {{ else}}*/}}
                           <input type="submit" name="nothing" value="Join Now">
-                           {{end}}
+{{/*                           {{end}}*/}}
                           </div>
                          </form>
                 {{else if not (.Before) }}
