handling the quia

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -30,13 +30,12 @@
 		<div class="info-2">
 			<p class="about">{{.Q.Event}}</p>
 		</div>	
-		<!-- <div class="info-1">
-			<form method="POST" action="">
+		<div class="info-1">
+			<form method="POST" action="/QuizPortal/Leaderboard">
 				
-				<input type="hidden" name="event_name" value="{{ .Q.Event }}">
+				<input type="hidden" name="eventname" value="{{ .Q.Event }}">
 				<button type="submit" class="btn1">LEADERBOARD</button>
-			</form></div> -->
-		<!-- <a href="#">About</a> -->
+			</form></div> 
 	</div>
 	<div class="quizzes">
 		<div class="quiz">
