--- a/templates/completed.html
+++ b/templates/completed.html
@@ -13,27 +13,21 @@
 <div class="box">
 	<div class="top">
 		<img src="/static/img/mmil_logo.jpg" width="50px"><a href="dashboard.html">MMIL</a>
-		{{ if .Checksssion}}
-		<button class="button" onclick="logout()">Log Out</button>
-		{{else}}
+		
+		{{ if .Checksession}}
+		<button onclick="logout()"class="button">Log Out</button>
+		{{ else }}
 		<button onclick="login()">Log In</button>
-		<button class="signn" onclick="signup()">Sign Up</button>
-		{{ end}}
+		<button onclick="signup()">Sign Up</button>
+		{{ end }}
 	</div>
 	<div class="center">
 		<div class="info-1">
 		<a href="/QuizPortal/events" class="about" style="font-size: 17.5px;">Live Events</a>
 		</div>
 		<div class="info-1">
-			<p class="about" style="font-size: 20px;">{{ Eventsname }}</p>
-		</div>	
-		<div class="info-1">
-			<form method="POST" action="/leaderboard/">
-				<input type="hidden" name="event_name" value="{{ event_name }}">
-				<button type="submit" class="btn1" style="font-size: 17.5px;">LEADERBOARD</button>
-			</form></div>
-	</div>
-	<p style="text-align: center;font-size: 30px;margin-top: 100px;">Completed!!!!</p>
+			<!-- <p class="about" style="font-size: 20px;">{{.}}</p> -->
+	<p style="text-align: center;font-size: 30px;margin-top: 100px;">Hurray, Quiz Completed!!!!</p>
 </div>
 <script src="/static/js/app.js"></script>
 </body>
