Final addition of leaderboard to the quiz

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -31,7 +31,7 @@
 			<p class="about">{{.Q.Event}}</p>
 		</div>	
 		<div class="info-1">
-			<form method="POST" action="/QuizPortal/Leaderboard">
+			<form method="POST" action="/QuizPortal/leaderboard">
 				
 				<input type="hidden" name="eventname" value="{{ .Q.Event }}">
 				<button type="submit" class="btn1">LEADERBOARD</button>
