--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -11,7 +11,7 @@
 <body>
 <div class="box">
 	<div class="top">
-		<img src="/static/img/mmil_logo.jpg" width="50px"><a href="/dashboard">MMIL</a>
+		<img src="/static/img/mmil_logo.jpg" width="50px"><a href="QuizPortal/login/dashboard">MMIL</a>
 		{{ if .Checksession}}
 		<button onclick="logout()" class="button">LogOut</button>
 		{{else}}
@@ -23,22 +23,22 @@
 		<div class="info-1">
 			<a href='/QuizPortal/events' class="event">Live Events</a>
 		</div>
-		<form method="POST" action="/quiz/">
-				<input type="hidden" name="event_name" value="{{ event_name }}">
-				<button type="submit" class="btn1">{{ event_name }}</button>
+	    
+		 <form method="POST" action="/quiz/">
+				<input type="hidden" name="eventname" value="{{ .Event }}">
+				<button type="submit" class="btn1">{{ .Event }}</button>
 		</form>	
 		<div class="info-1">
 			<a href='/contact' class="contact">contact</a>
 		</div>
-		<!-- <a href="#">About</a> -->
 	</div>
 	<div class="bottom">
 		<p>LeaderBoard</p>
 		<div class="leaderboard">
-	     {{ range .Score}}
+	     {{ range .List}}
 		<div class="block">
 			<div class="left">{{ .Username }}</div>
-			<div class="right">{{ Points }}</div>
+			<div class="right">{{ .Points }}</div>
 		</div>
 		{{end}}
 	</div>
