--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -29,7 +29,7 @@
 				<button type="submit" class="btn1">{{ .Event }}</button>
 		</form>	
 		<div class="info-1">
-			<a href='/contact' class="contact">contact</a>
+			<a href='/QuizPortal/contact' class="contact">contact</a>
 		</div>
 	</div>
 	<div class="bottom">
