--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,13 +23,13 @@
 			<a href="/" class="about">About</a>
 		</div>
 		<div class="info-1">
-			<a href='/events' class="event">Live Events</a>
+			<a href='/QuizPortal/events' class="event">Live Events</a>
 		</div>
 <!-- 		<div class="info-1">
 			<a href='/' class="leacerboard">leaderboard</a>
 		</div>	 -->
 		<div class="info-1">
-			<a href='/contact' class="contact">contact</a>
+			<a href='/QuizPortal/contact' class="contact">contact</a>
 		</div>
 		<!-- <a href="#">About</a> -->
 	</div>
