--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,7 +38,12 @@
 	 </div>
 	<div class="bottom">
 	</div>
+	<p style="text-align: center;font-size: 23px;margin-top: 100px;color:rgb(14, 13, 13);">
+
+		<a href='https://www.linkedin.com/in/yashi-gupta-b82987173/' class="event">Connect with me on LinkedIn</a>
+	</p>
 </div>
+
 <script src="/static/js/app.js"></script>
 </body>
 </html>
