--- a/templates/signup.html
+++ b/templates/signup.html
@@ -20,7 +20,7 @@
 	</div>
 	<div class="center">
 		<div class="info-1 ">
-			<a href="/" class="about">About</a>
+			<a href="/QuizPortal" class="about">About</a>
 		</div>
 		<div class="info-1">
 			<a href='/QuizPortal/events' class="event">Live Events</a>
