--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,21 @@
             <a href="/QuizPortal/events" class="about" style="font-size: 17.5px;">Live Events</a>
             </div>	
     </div>
-    <p style="text-align: center;font-size: 30px;margin-top: 100px;">Hurray</p>
+    <p style="text-align: left;font-size: 23px;margin-top: 100px;color: black;">
+        This is a multiple quiz portal with live leaderboard.
+         
+        <a>Features of this Portal are as follows:</a>
+            ✅ Login for both organizer and participants.
+            ✅ Create quiz functionality for organizers.
+            
+            ✅ Validity limit of quiz added by organizer.
+            
+            ✅ Live Leaderboard for every quiz
+            
+           Signup yourself and enjoy, voila!!💫
+        
+        </a> 
+    </p>
     <script src="/static/js/app.js"></script>
     </body>
     </html>
