modified the templating

--- a/templates/events.html
+++ b/templates/events.html
@@ -30,7 +30,7 @@
             </div>
             {{ else }}
             <div class="info-1">
-                <a href='/QuizPortal/login/dashboard' class="event">About</a>
+                <a href='/QuizPortal/login/dashboard' class="event">Dashboard</a>
             </div>
             {{ end}}
             <div class="info-1 active">
